--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 *{
     background-color: #4F000B;
     color: #FF7F51;
-    text-align: center
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
 
 }
 h1 {
