--- a/style.css
+++ b/style.css
@@ -1,76 +1,211 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
-*{
-    background-color: #4F000B;
-    color: #FF7F51;
+* {
+    z-index: 2;
+    min-height: 1vh;
+    background: url(./Recursos/Fondos/vino5.jpg) no-repeat center center fixed;
+    background-size: cover;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-size: 20px;
+    font-weight: bolder;
+  
+    color: #F7F7F7;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
-
-}
-h1 {
-    text-transform: uppercase;
-}
-
-.container{
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  .navbar {
+    background: #62374e;
+    position: sticky;
+    top: 0;
+    z-index: 3;
+  }
+  
+  .navbar a {
+    color: #62374e;
+    display: inline-block;
+    padding: 5px;
+    width: 100%;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    transition: 0.3s ease-out all;
+  }
+  
+  .navbar a:hover {
+    background: #007880;
+    color: #EEEEEE;
+    text-decoration: none;
+  }
+  
+  .navbar {
+    max-width: 2000px;
+    width: 75%;
     margin: auto;
-    background-color: #4F000B;
-    width: 800px;
-    padding:30px;
-
-}
-
-ul, li{
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  h1 {
+    text-transform: uppercase;
+  }
+  
+  #container {
+    background: rgba(139, 139, 139, 0);
+    height: 420px;
+    margin: 0 auto;
+    backdrop-filter: blur(1px);
+    border: solid 1px rgba(172, 29, 29, 0);
+    border-radius: 5px;
+    max-width: 850px;
+    width: 150%;
+    padding: 30px;
+    box-sizing: border-box;
+    padding-top: 50px;
+    z-index: 1;
+  }
+  
+  #container > ul,
+  li {
     margin: 0;
     padding: 0;
-    list-style:none;
-}
-
-ul.slider{
-    
+    list-style: none;
+  }
+  
+  #container > ul.slider {
     position: relative;
-    width: 800px;
-    height:300px;
-    
-}
-
-ul.slider li{
+    max-width: 800px;
+    width: 100%;
+    height: 400px;
+  }
+  
+  #container > ul.slider li {
     position: absolute;
     left: 0;
     top: 0;
     opacity: 0;
-    width:inherit;
-    height:inherit;
-    background-color:white;
-    transition: opacity 0.5s
-}
-ul.slider li img{
+    width: inherit;
+    height: inherit;
+    background: rgba(37, 37, 37, 0.1);
+    transition: opacity 0.5s;
+  }
+  #container > ul.slider li img {
     width: 100%;
-    height: 300px;
+    height: 400px;
     object-fit: cover;
-}
-ul.slider li:first-child{
+  }
+  #container > ul.slider li:first-child {
     opacity: 1;
-}
-ul.slider li:target{
+  }
+  #container > ul.slider li:target {
     opacity: 1;
-}
-.menu{
+  }
+  #container > .menu {
     text-align: center;
-    margin: 20px;
-}
-.menu li{
+    margin: 12px;
+  }
+  #container > .menu li {
     display: inline-block;
     text-align: center;
-}
-.menu li a{
+  }
+  #container > .menu li a {
     display: inline-block;
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
-    background-color:grey;
-    padding: 10px;
-    width:20px;
+    background: rgba(98, 55, 78, 0.75);
+    padding: 6px;
+    width: 20px;
     height: 20px;
-    font-size:20px;
-    border-radius:100%;
-}
-
+    font-size: 16px;
+    border-radius: 100%;
+  }
+  
+  #home h1,
+  span,
+  p {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    width: 40%;
+    margin: 0 auto;
+  }
+  
+  #us h1,
+  p {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    padding: 4px;
+    position: relative;
+    width: 40%;
+    padding-top: 10px;
+    margin: auto;
+  }
+  
+  #evento h1,
+  p {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    padding: 4px;
+    position: relative;
+    width: 40%;
+    text-align: center;
+    padding-top: 10px;
+    margin: 0 auto;
+  }
+  
+  #registro h1,
+  h2,
+  legend,
+  label,
+  input,
+  fieldset,
+  textarea,
+  a {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    text-align: center;
+    line-height: 1;
+    padding: 1px;
+    position: relative;
+    width: 50%;
+    padding-top: 10px;
+    margin: 0 auto;
+  }
+  
+  #clima h1,
+  p,
+  iframe {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    padding: 4px;
+    position: relative;
+    width: 40%;
+    text-align: center;
+    margin: 0 auto;
+  }
+  
+  #ubicacion h1 {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    padding: 4px;
+    position: relative;
+    width: 40%;
+    text-align: center;
+    margin: 0 auto;
+  }
+  
+  #contacto h1 {
+    background: rgba(5, 7, 12, 0.4);
+    border: solid 1px rgba(83, 83, 83, 0.9);
+    border-radius: 5px;
+    padding: 4px;
+    position: relative;
+    width: 40%;
+    text-align: center;
+    margin: 0 auto;
+  }
